fix: search select box does not display properly on safari (#423)

--- a/packages/website/src/index.css
+++ b/packages/website/src/index.css
@@ -24,3 +24,7 @@ textarea {
 kbd {
   margin: 0.25rem;
 }
+
+select {
+  appearance: none;
+}
